--- a/SS.css
+++ b/SS.css
@@ -13,6 +13,12 @@ body {
       padding-bottom: 10px;
       margin-bottom: 30px;
     }
+    h2{
+          color: #004080;
+          border-bottom: 3px solid #004080
+          padding-bottom: 10px;
+          margin-bottom:  30px;
+    }
     h3 {
       color: #0066cc;
       margin-top: 30px;
