--- a/SS.css
+++ b/SS.css
@@ -15,7 +15,7 @@ body {
     }
     h2{
           color: #004080;
-          border-bottom: 3px solid #004080
+          border-bottom: 3px solid #004080;
           padding-bottom: 10px;
           margin-bottom:  30px;
     }
